--- a/jewellery_store/pubspec.yaml
+++ b/jewellery_store/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^0.7.0-nullsafety
   url_launcher: ^6.0.9
   http: ^0.13.3
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
